cabal-version:  2.2
build-type:     Simple

name:           polyparse
version:        1.30
--x-revision: 0

----------------------------------------

category:       Text, Parsing
synopsis:       A variety of alternative parser combinator libraries.
description:
            A variety of alternative parser combinator libraries, including
            the original HuttonMeijer set.  The Poly sets have features like
            good error reporting, arbitrary token type, running state, lazy
            parsing, and so on.  Finally, Text.Parse is a proposed
            replacement for the standard Read class, for better
            deserialisation of Haskell values from Strings.
            .

tested-with:
            GHC == 7.10.3
          , GHC == 8.0.2
          , GHC == 8.2.2
          , GHC == 8.4.3
          , GHC == 8.6.1

license:        LGPL-3.0-only
license-file:   COPYRIGHT
copyright:      (c) 2006-2016 Malcolm Wallace, 2018 Spiros Boosalis
author:         Malcolm Wallace <Malcolm.Wallace@me.com>
maintainer:     Malcolm Wallace <Malcolm.Wallace@me.com>, Spiros Boosalis <samboosalis@gmail.com>
homepage:       http://code.haskell.org/~malcolm/polyparse/

extra-source-files: LICENCE-LGPL, LICENCE-commercial

----------------------------------------

bug-reports: http://github.com/sboosali/polyparse/issues

source-repository head
  type:     darcs
  location: http://code.haskell.org/polyparse

----------------------------------------

library

  hs-source-dirs:       src
  exposed-modules:
        Text.ParserCombinators.HuttonMeijer,
        Text.ParserCombinators.HuttonMeijerWallace,
        Text.ParserCombinators.Poly,
        Text.ParserCombinators.Poly.Base,
        Text.ParserCombinators.Poly.Result,
        Text.ParserCombinators.Poly.Parser,
        Text.ParserCombinators.Poly.Plain,
        Text.ParserCombinators.Poly.Lazy,
        Text.ParserCombinators.Poly.StateParser,
        Text.ParserCombinators.Poly.State,
        Text.ParserCombinators.Poly.StateLazy,
        Text.ParserCombinators.Poly.Lex,
        Text.Parse
  other-modules:
         Text.ParserCombinators.Poly.Compat

  build-depends:   base < 5

  if impl(ghc)
    build-depends: bytestring
                 , text

    exposed-modules:
        Text.ParserCombinators.Poly.ByteString
        Text.ParserCombinators.Poly.ByteStringChar
        Text.Parse.ByteString
        Text.ParserCombinators.Poly.Text
        Text.ParserCombinators.Poly.StateText
--      Text.Parse.Text

  default-language:   Haskell98
  default-extensions: CPP

  cpp-options:          -DVERSION="1.12"
  nhc98-options:        -K6M
  if impl(ghc >= 8.0)
     ghc-options:
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances

--------------------------------------------------